--- a/rpa-certificates-of-free-sale/Logic Workflows/Start Up/OpenCRM.xaml
+++ b/rpa-certificates-of-free-sale/Logic Workflows/Start Up/OpenCRM.xaml
@@ -6,7 +6,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1794,741</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1794,830</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>OpenBrowsers_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="21">
@@ -97,7 +97,7 @@
           <av:PointCollection x:Key="ConnectorLocation">300,294.5 300,367</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <Flowchart DisplayName="Main Logic" sap:VirtualizedContainerService.HintSize="826,1030" sap2010:WorkflowViewState.IdRef="Flowchart_2">
+      <Flowchart DisplayName="Main Logic" sap:VirtualizedContainerService.HintSize="864,1250" sap2010:WorkflowViewState.IdRef="Flowchart_2">
         <Flowchart.Variables>
           <Variable x:TypeArguments="x:Boolean" Name="boolSignedIn" />
           <Variable x:TypeArguments="x:Boolean" Name="boolPickAccountExists" />
@@ -109,8 +109,8 @@
             <av:Point x:Key="ShapeLocation">270,2.5</av:Point>
             <av:Size x:Key="ShapeSize">60,75</av:Size>
             <av:PointCollection x:Key="ConnectorLocation">300,77.5 300,127.5</av:PointCollection>
-            <x:Double x:Key="Height">993.5</x:Double>
-            <x:Double x:Key="Width">791.641666666667</x:Double>
+            <x:Double x:Key="Height">1213.5</x:Double>
+            <x:Double x:Key="Width">830</x:Double>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
         <Flowchart.StartNode>
@@ -148,10 +148,7 @@
                 </sap:WorkflowViewStateService.ViewState>
               </to:CheckSignedIn>
               <FlowStep.Next>
-                <FlowDecision x:Name="__ReferenceID4" DisplayName="Signed In?" sap:VirtualizedContainerService.HintSize="70,87" sap2010:WorkflowViewState.IdRef="FlowDecision_4">
-                  <FlowDecision.Condition>
-                    <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="boolSignedIn" />
-                  </FlowDecision.Condition>
+                <FlowDecision x:Name="__ReferenceID4" Condition="[boolSignedIn]" DisplayName="Signed In?" sap:VirtualizedContainerService.HintSize="70,87" sap2010:WorkflowViewState.IdRef="FlowDecision_4">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -177,10 +174,7 @@
                         </sap:WorkflowViewStateService.ViewState>
                       </to:CheckForPickAccountPage>
                       <FlowStep.Next>
-                        <FlowDecision x:Name="__ReferenceID5" DisplayName="Pick Account?" sap:VirtualizedContainerService.HintSize="81,87" sap2010:WorkflowViewState.IdRef="FlowDecision_3">
-                          <FlowDecision.Condition>
-                            <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="boolPickAccountExists" />
-                          </FlowDecision.Condition>
+                        <FlowDecision x:Name="__ReferenceID5" Condition="[boolPickAccountExists]" DisplayName="Pick Account?" sap:VirtualizedContainerService.HintSize="81,87" sap2010:WorkflowViewState.IdRef="FlowDecision_3">
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -207,10 +201,7 @@
                                 </sap:WorkflowViewStateService.ViewState>
                               </to:CheckOwnAccountExists>
                               <FlowStep.Next>
-                                <FlowDecision x:Name="__ReferenceID6" DisplayName="Own Account?" sap:VirtualizedContainerService.HintSize="84,87" sap2010:WorkflowViewState.IdRef="FlowDecision_2">
-                                  <FlowDecision.Condition>
-                                    <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="boolAccountExists" />
-                                  </FlowDecision.Condition>
+                                <FlowDecision x:Name="__ReferenceID6" Condition="[boolAccountExists]" DisplayName="Own Account?" sap:VirtualizedContainerService.HintSize="84,87" sap2010:WorkflowViewState.IdRef="FlowDecision_2">
                                   <sap:WorkflowViewStateService.ViewState>
                                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
